# energy_demand_australia

./: .gitignore  README.md  pyproject.toml
DataScripts/: Makefile  downloadNEMdata.py
config/: config.yaml
data_scripts/: .gitignore  Makefile  data_merge.py  data_processing.py  data_utils.py  download_NEM_data.py
models/: model.py  model_utils.py
